--- a/css/md.css
+++ b/css/md.css
@@ -1,9 +1,11 @@
 *
-{color:blue;}
-
-
-.case
 {
-  margin: 2.5%;
-  padding: 2%;
+  color:rgb(196, 28, 22);
+}
+
+
+.container
+{
+  max-width: 1000px;
+  margin: auto;
 }
