--- a/css/stylebis.css
+++ b/css/stylebis.css
@@ -1,6 +1,7 @@
 *
 {
   /* border: 1px solid; */
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .container
@@ -17,19 +18,29 @@
   border-radius: 10% 0 10% 0;
   max-width: 340px;
   box-shadow: 5px 10px darkgrey;
-  background-image: linear-gradient(to left, white, grey);
+  background-image: linear-gradient(to left, rgb(180, 252, 87), rgb(44, 145, 17));
 
   display: flex;
   flex-direction: column;
-  text-align: center;
   justify-content: space-between;
+  margin: 20px;
+  padding: 15px;
 }
 
 figure
 {
+  width: 140px;
+  height: 200px;
+  /* background-image: url("img/dos-rouge.png"); */
   margin: 0;
   padding: 0;
   /* réinitialisation des marges */
+}
+
+h2
+{
+  margin: 5px;
+  text-align: center;
 }
 
 .cartes
@@ -38,32 +49,52 @@ figure
   justify-content: space-around;
 }
 
-.basDeCase
+figure img
 {
-  position: relative;
-  text-align: left;
-  padding-left: 10%;
+  border-radius: 15px;
 }
 
-.basDeCase img, .basDeCase .miniMenu
+figure img:nth-child(1)
 {
-  position: absolute;
-  right: 0;
+  position:absolute;
+  -webkit-transition-delay: 10s;
+  -moz-transition-delay: 10s;
+  -ms-transition-delay: 10s;
+  -o-transition-delay: 10s;
+  transition-delay: 10s;
+  z-index: 1;
+}
+
+figure:hover img:nth-child(1)
+{
+  opacity: 0;
+  transition: all .25s ease-out;
+}
+
+.basDeCase
+{
+  display: flex;
+  justify-content: space-between;
 }
 
 .basDeCase img
 {
   width: 15px;
-  margin: 0 10%;
 }
 
 .basDeCase .miniMenu
 {
   width: 10px;
   height: 20px;
-  border-radius: 30%;
-  padding: 5px;
-  margin: 0 5%;
+  border-radius: 30% 0 30% 0;
+  padding: 5px 5px 0 10px;
+  margin-right: 15px;
+}
+
+.bouton
+{
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 a
