--- a/css/lg.css
+++ b/css/lg.css
@@ -8,3 +8,13 @@
   max-width: 1350px;
   margin: auto;
 }
+
+a:hover
+{
+  background-color: black;
+}
+
+.basDeCase .bouton:hover
+{
+  color: white;
+}
