--- a/css/stylebis.css
+++ b/css/stylebis.css
@@ -41,12 +41,29 @@ h2
 {
   margin: 5px;
   text-align: center;
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+}
+
+h2:hover
+{
+  transform: scale(1.5);
+  text-shadow: 2px 1px white;
 }
 
 .cartes
 {
   display: flex;
   justify-content: space-around;
+}
+
+.case:hover
+{
+  -webkit-filter: hue-rotate(90deg);
+  filter: hue-rotate(360deg);
+  /* transition: 3s ease; */
 }
 
 figure img
@@ -71,10 +88,16 @@ figure:hover img:nth-child(1)
   transition: all .25s ease-out;
 }
 
+figure:active img:nth-child(1)
+{
+  opacity: 0;
+}
+
 .basDeCase
 {
   display: flex;
   justify-content: space-between;
+  height: 30px;
 }
 
 .basDeCase img
@@ -85,9 +108,9 @@ figure:hover img:nth-child(1)
 .basDeCase .miniMenu
 {
   width: 10px;
-  height: 20px;
+  height: 25px;
   border-radius: 30% 0 30% 0;
-  padding: 5px 5px 0 10px;
+  padding: 5px 12px 0 7px;
   margin-right: 15px;
 }
 
@@ -103,9 +126,29 @@ a
   font-size: 1.1em;
 }
 
-a:hover
+.basDeCase a:first-child:hover, .basDeCase img:hover
+{
+  box-sizing: border-box;
+}
+
+.basDeCase a:last-child:hover, .bouton
 {
   border: 1px outset white;
   box-shadow: 4px 3px 10px grey;
   /* si la balise contenue dans le lien est décalée, la bordure n'est pas décalée avec */
+}
+
+.bouton:hover
+{
+  transform: rotate(360deg);
+  -webkit-transition-duration: 1s;
+  -moz-transition-duration: 1s;
+  -ms-transition-duration: 1s;
+  -o-transition-duration: 1s;
+  transition-duration: 1s;
+}
+
+#joker:hover
+{
+  filter: hue-rotate(90deg);
 }
