--- a/css/xs.css
+++ b/css/xs.css
@@ -1,10 +1,20 @@
 *
 {
-  color:black;
+  color:rgb(1, 50, 0);
 }
 
 .container
 {
   max-width: 350px;
   margin: auto;
+}
+
+a:hover
+{
+  background-color: rgb(1, 50, 0);
+}
+
+.basDeCase .bouton:hover
+{
+  color: white;
 }
