--- a/css/stylebis.css
+++ b/css/stylebis.css
@@ -71,7 +71,7 @@ figure img
   border-radius: 15px;
 }
 
-figure img:nth-child(1)
+figure img:first-child
 {
   position:absolute;
   -webkit-transition-delay: 10s;
@@ -82,13 +82,13 @@ figure img:nth-child(1)
   z-index: 1;
 }
 
-figure:hover img:nth-child(1)
+figure:hover img:first-child
 {
   opacity: 0;
   transition: all .25s ease-out;
 }
 
-figure:active img:nth-child(1)
+figure:active img:first-child
 {
   opacity: 0;
 }
@@ -105,19 +105,23 @@ figure:active img:nth-child(1)
   width: 15px;
 }
 
-.basDeCase .miniMenu
+button
 {
-  width: 10px;
+  background-image: url("../img/3dots.svg");
+  background-color: transparent;
+  background-size: contain;
+  width: 25px;
   height: 25px;
+  border: none;
   border-radius: 30% 0 30% 0;
-  padding: 5px 12px 0 7px;
   margin-right: 15px;
 }
 
-.bouton
+.rejouer
 {
   padding-left: 15px;
   padding-right: 15px;
+  margin-left: 10px;
 }
 
 a
@@ -131,14 +135,14 @@ a
   box-sizing: border-box;
 }
 
-.basDeCase a:last-child:hover, .bouton
+.basDeCase a:last-child:hover, .rejouer, button:hover
 {
   border: 1px outset white;
   box-shadow: 4px 3px 10px grey;
   /* si la balise contenue dans le lien est décalée, la bordure n'est pas décalée avec */
 }
 
-.bouton:hover
+.rejouer:hover
 {
   transform: rotate(360deg);
   -webkit-transition-duration: 1s;
@@ -148,6 +152,10 @@ a
   transition-duration: 1s;
 }
 
+button:hover
+{
+  transform: scale(1.6);
+}
 #joker:hover
 {
   filter: hue-rotate(90deg);
